feat: add user handler to handle registration
