# configs/openapi.yaml
@@ -3,10 +3,27 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: ""
     version: 0.0.1
 paths:
+    /api/v1/users:
+        post:
+            tags:
+                - User
+            operationId: User_CreateUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.v1.CreateUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.v1.CreateUserResponse'
     /helloworld/{name}:
         get:
             tags:
@@ -28,6 +45,24 @@ paths:
                                 $ref: '#/components/schemas/helloworld.v1.HelloReply'
 components:
     schemas:
+        api.v1.CreateUserRequest:
+            type: object
+            properties:
+                username:
+                    type: string
+                password:
+                    type: string
+                name:
+                    type: string
+                gender:
+                    type: string
+                phoneNumber:
+                    type: string
+        api.v1.CreateUserResponse:
+            type: object
+            properties:
+                id:
+                    type: string
         helloworld.v1.HelloReply:
             type: object
             properties:
@@ -36,3 +71,5 @@ components:
             description: The response message containing the greetings
 tags:
     - name: Greeter
+      description: The greeting service definition.
+    - name: User
